syntax = "proto3";

package neptune;

message Void {}
message Profile {
    string profile_name = 1;
    repeated string images = 2;
    bool block_input = 3;
    bool windowed = 4;
}

message Profiles {
    repeated Profile profiles = 1;
}

message ProfileName {
    string profile_name = 1;
}

service Nepnep {
    rpc ScreenBlockStart(Void) returns (Void); 
    rpc ScreenBlockStartWithCustomProfile(Profile) returns (Void); 
    rpc ScreenBlockStartWithProfileName(ProfileName) returns (Void); 

    rpc ScreenBlockEnd(Void) returns (Void);
    rpc GetScreenBlockProfiles(Void) returns (Profiles);
}